Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40797

QNetworkAccessManager ftp backend is confused on errors

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.3.2
    • 4.8.6, 5.2.1
    • Network
    • None

      Trying to initiate an ftp operation with QNetworkAccessManager after a previously failed operation will result in continued QNetworkReply::ContentAccessDenied errors.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            richmoore Richard Moore (qtnetwork)
            mbroadst Matt Broadstone
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes